Fix checkbox vertical align

--- a/css/common.css
+++ b/css/common.css
@@ -814,3 +814,7 @@ div#rss
 	background: rgba(0, 0, 0, 0.5);
 }
 
+input[type="checkbox"]
+{
+	vertical-align:middle;
+}
